<resources>
    <string name="app_name">FlipGrid App</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="common_string_ok">OK</string>
    <string name="common_error_title">Error</string>
    <string name="common_error_no_internet">There is no internet connectivity, Please connect to internet or try again later.</string>
    <string name="common_error_server_error">Server not responding at this moment, please try again later.</string>
    <string name="common_string_cancel">Cancel</string>
    <string name="common_string_update">Update</string>
    <string name="common_error_message">Please try again later.</string>
    <string name="profile_create_profile_label">Profile Creation</string>
    <string name="profile_edit_profile_label">Edit Profile</string>
    <string name="profile_first_name_label">First Name</string>
    <string name="profile_last_name_label">Last Name</string>
    <string name="profile_last_email_label">Email Address</string>
    <string name="profile_password_label">Password</string>
    <string name="profile_website_label">Website</string>
    <string name="profile_common_label_cancel">Cancel</string>
    <string name="profile_common_label_save">Submit</string>
    <string name="profile_common_label_sign_in">Sign In</string>
    <string name="profile_pic_camera_dialog_button">Camera</string>
    <string name="profile_pic_camera_permission_dialog_button">Camera Permission</string>
    <string name="profile_pic_camera_settings_dialog_button">Settings</string>
    <string name="profile_pic_dialog_title">Choose Avatar</string>
    <string name="profile_tap_to_add_avatar">Tap to add avatar</string>
    <string name="profile_first_name_empty_error">Please enter first name.</string>
    <string name="profile_avatar_empty_error">Please add your avatar.</string>
    <string name="profile_last_name_empty_error">Please enter last name.</string>
    <string name="profile_email_empty_error">Please enter email address.</string>
    <string name="profile_password_empty_error">Please enter your password.</string>
    <string name="profile_website_empty_error">Please enter your website name.</string>
    <string name="profile_confirmation_hello_message">Hello, %1$s!</string>
    <string name="cat_detail_description_label">Description</string>
    <string name="cat_detail_characteristics_label">Characteristics</string>
    <string name="cat_detail_Child_Friendly_label">Child Friendly</string>
    <string name="cat_detail_Adaptability_label">Adaptability</string>
    <string name="cat_detail_Affection_label">Affection Level</string>
    <string name="cat_detail_Dog_Friendly_label">Dog Friendly</string>
    <string name="cat_detail_Temprament_label">Temprament</string>
    <string name="cat_detail_Weight_label">Weight</string>
    <string name="cat_detail_Know_more_label">Know More</string>
    <string name="profile_pic_dialog_message">Please select your avatar.</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_name">Name: %1$s %2$s</string>
    <string name="nav_email">Email: %1$s</string>
    <string name="nav_work">Website: %1$s</string>
    <string name="profile_pic_instruction">Use the form below to submit your portfolio. An email and password are required.</string>
    <string name="profile_profile_confirmation_instruction">Your super-awesome portfolio has been successfully submitted! The preview below is what the community will see!</string>
    <string name="cat_list_origin">Origin: %1$s</string>
    <string name="camera_permission_needed">You don\'t have permission to access camera, Please allow camera permission from native settings.</string>

</resources>