<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/labelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_first_name_label"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
       />

    <TextView android:id="@+id/labelEmail"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_email_label"
        android:textSize="@dimen/small_12sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/labelName"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black" />

   <!-- <TextView android:id="@+id/labelPhone"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_phone_label"
        android:textSize="@dimen/small_12sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black" />-->

   <!-- <TextView android:id="@+id/labelEducation"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_phone_label"
        android:textSize="@dimen/small_12sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/labelPhone"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black" />-->

    <TextView android:id="@+id/labelWebsite"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_website_label"
        android:textSize="@dimen/small_12sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black" />

  <!--  <TextView android:id="@+id/labelAbout"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_about_label"
        android:textSize="@dimen/small_12sp"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/labelWork"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black" />-->

    <View android:id="@+id/seperatorAbout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/seperator"
        app:layout_constraintTop_toBottomOf="@+id/labelWebsite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        />

    <TextView android:id="@+id/labelEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit_profile_label"
        android:textSize="@dimen/medium_16sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/seperatorAbout"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:drawablePadding="@dimen/margin_05dp"/>

    <View android:id="@+id/seperatorEditProfile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/seperator"
        app:layout_constraintTop_toBottomOf="@+id/labelEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>