<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileConfirmationActivity">

    <TextView android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_create_profile_label"
        android:textSize="@dimen/heading_22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"/>

        <TextView android:id="@+id/lablePickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_profile_confirmation_instruction"
            android:textSize="@dimen/medium_16sp"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:paddingEnd="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            android:textColor="@color/gray_mid"/>

        <include
            android:id="@+id/imagePickerCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/profile_pic_layout_row"
            app:layout_constraintTop_toBottomOf="@id/lablePickImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    <TextView android:id="@+id/websiteLabel"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_18sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/imagePickerCard"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/light_blue" />

    <TextView android:id="@+id/nameLabel"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_18sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/websiteLabel"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black" />

    <TextView android:id="@+id/emailLabel"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_18sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/profile_common_label_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:textStyle="bold"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>