<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.CatBreedsDetailFragment"
    android:paddingBottom="40dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_15dp">

    <androidx.cardview.widget.CardView android:id="@+id/imageViewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:paddingBottom="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView android:id="@+id/catImageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            />
    </androidx.cardview.widget.CardView>

    <TextView android:id="@+id/textviewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/imageViewCard"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"/>

    <TextView android:id="@+id/textviewOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        android:textSize="16sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/textviewName"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/purple_200"/>

    <TextView android:id="@+id/tvLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/cat_detail_Know_more_label"
        app:layout_constraintTop_toBottomOf="@id/textviewName"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/blue"/>

    <TextView android:id="@+id/textviewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textSize="@dimen/medium_16sp"
        android:text="@string/cat_detail_description_label"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textviewOrigin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:textColor="@color/black"/>

    <TextView android:id="@+id/textviewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/textviewDescriptionLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:textColor="@color/gray_mid"/>

    <TextView android:id="@+id/textviewCharsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textSize="@dimen/medium_16sp"
        android:text="@string/cat_detail_characteristics_label"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textviewDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:textColor="@color/black"/>

    <include
        android:id="@+id/child_friendly_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        layout="@layout/detail_layout_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textviewCharsLabel"/>

    <include
        android:id="@+id/adaptability_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        layout="@layout/detail_layout_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/child_friendly_section"/>

    <include
        android:id="@+id/affection_level_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        layout="@layout/detail_layout_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adaptability_section"/>

    <include
        android:id="@+id/dog_friendly_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        layout="@layout/detail_layout_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affection_level_section"/>

    <include
        android:id="@+id/temperament_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        layout="@layout/detail_layout_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dog_friendly_section"/>

    <include
        android:id="@+id/weight_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        layout="@layout/detail_layout_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperament_section"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>